--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   syncfusion_flutter_gauges: ^24.1.45
   flutter_joystick: ^0.0.4
   location: ^6.0.2
+  xml: ^6.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -79,7 +80,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
-     - images/car.png
+     - images/rawalpindi.kml
+
 
   #   - images/a_dot_ham.jpeg
 
