--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,12 @@ dependencies:
   latlong2: ^0.9.1
   geocoding: ^3.0.0
   flutter_typeahead: ^4.8.0
-  firebase_core: ^2.27.2
-  cloud_firestore: ^4.15.10
-  firebase_auth: ^4.18.0
-  firebase_database: ^10.5.4
+  firebase_core: ^3.4.0
+  cloud_firestore: ^5.3.0
+  http: ^1.2.2
+  firebase_storage: ^12.2.0
+  firebase_auth: ^5.2.0
+  firebase_database: ^11.1.0
   flutter_open_street_map: ^0.0.4
   liquid_progress_indicator: ^0.4.0
   sleek_circular_slider: ^2.0.1
@@ -32,6 +34,8 @@ dependencies:
   location: ^6.0.2
   xml: ^6.1.0
   flutter_asset_manager: ^0.0.2
+  google_fonts: any
+  flutter_svg: ^2.0.10+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -41,11 +45,4 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/Askary 14.txt
-    - images/DHA PHASE 1(2).txt
-    - images/DHA PHASE 1.txt
-    - images/jinnah.txt
-    - images/jinnah Park.txt
-    - images/Jinnah_Hall.txt
-
-
+    - images/
