--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geolocator: ^12.0.0
   flutter_map: ^5.0.0
+  get: ^4.6.5
+
   flutter_screenutil: ^5.0.0
   latlong2: ^0.9.1
   geocoding: ^3.0.0
