--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   geolocator: ^12.0.0
   flutter_map: ^5.0.0
   get: ^4.6.5
+  url_launcher: ^6.0.12
+  provider: ^6.0.5
 
   flutter_screenutil: ^5.0.0
   latlong2: ^0.9.1
