--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   get: ^4.6.5
   url_launcher: ^6.0.12
   provider: ^6.0.5
-
+  liquid_progress_indicator: ^0.4.0
+  liquid_progress_indicator_v2: ^0.5.0
   flutter_screenutil: ^5.0.0
   latlong2: ^0.9.1
   geocoding: ^3.0.0
@@ -30,7 +31,6 @@ dependencies:
   firebase_auth: ^5.2.0
   firebase_database: ^11.1.0
   flutter_open_street_map: ^0.0.4
-  liquid_progress_indicator: ^0.4.0
   sleek_circular_slider: ^2.0.1
   toggle_switch: ^2.1.0
   syncfusion_flutter_gauges: ^24.1.45
@@ -40,6 +40,8 @@ dependencies:
   flutter_asset_manager: ^0.0.2
   google_fonts: any
   flutter_svg: ^2.0.10+1
+  percent_indicator: ^4.2.2
+  animated_widgets: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
