--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   liquid_progress_indicator: ^0.4.0
   liquid_progress_indicator_v2: ^0.5.0
   flutter_screenutil: ^5.0.0
+  screenshot: ^3.0.0
+  image: ^4.2.0
   latlong2: ^0.9.1
   geocoding: ^3.0.0
   flutter_typeahead: ^4.8.0
@@ -54,3 +56,6 @@ flutter:
     - images/
     - images/logo.png
     - images/bg.jpeg
+    - images/auto.png
+    - images/manual.png
+    - images/saas.png
