--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   percent_indicator: ^4.2.2
   animated_widgets: ^1.1.0
+  file_picker: ^8.1.2
+  path: ^1.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
